@@ -414,8 +414,8 @@ if __FILE__ == $0
   glfwSetCursorEnterCallback( window, cursorenter_callback )
   glfwSetWindowSizeCallback( window, size_callback )
 
-  width_ptr = '    '
-  height_ptr = '    '
+  width_ptr = ' ' * 4
+  height_ptr = ' ' * 4
   glfwGetFramebufferSize(window, width_ptr, height_ptr)
   width = width_ptr.unpack('L')[0]
   height = height_ptr.unpack('L')[0]
