@@ -183,8 +183,8 @@ if __FILE__ == $0
 
   myinit()
 
-  width_ptr = '    '
-  height_ptr = '    '
+  width_ptr = ' ' * 4
+  height_ptr = ' ' * 4
   glfwGetFramebufferSize(window, width_ptr, height_ptr)
   width = width_ptr.unpack('L')[0]
   height = height_ptr.unpack('L')[0]
