@@ -27,8 +27,8 @@ if __FILE__ == $0
   glfwSetKeyCallback( window, key_callback )
 
   while glfwWindowShouldClose( window ) == 0
-    width_ptr = '        '
-    height_ptr = '        '
+    width_ptr = ' ' * 8
+    height_ptr = ' ' * 8
     glfwGetFramebufferSize(window, width_ptr, height_ptr)
     width = width_ptr.unpack('L')[0]
     height = height_ptr.unpack('L')[0]
